2007-08-30  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13282
          <rdar://problem/5126392> REGRESSION (NativePopUp): Rightmost character cut off in pop-up menu

        * rendering/RenderMenuList.cpp:
        (WebCore::RenderMenuList::updateOptionsWidth): When measuring option text, use
        the same WebCore run rounding behavior that is used to draw it in the popup button.

2007-08-30  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - updated test results for http://bugs.webkit.org/show_bug.cgi?id=13282
          <rdar://problem/5126392> REGRESSION (NativePopUp): Rightmost character cut off in pop-up menu

        * editing/pasteboard/4641033-expected.checksum:
        * editing/pasteboard/4641033-expected.png:
        * editing/pasteboard/4641033-expected.txt:
        * fast/forms/HTMLOptionElement_label02-expected.checksum:
        * fast/forms/HTMLOptionElement_label02-expected.png:
        * fast/forms/HTMLOptionElement_label02-expected.txt:
        * fast/forms/HTMLOptionElement_label03-expected.checksum:
        * fast/forms/HTMLOptionElement_label03-expected.png:
        * fast/forms/HTMLOptionElement_label03-expected.txt:
        * fast/forms/control-restrict-line-height-expected.checksum:
        * fast/forms/control-restrict-line-height-expected.png:
        * fast/forms/control-restrict-line-height-expected.txt:
        * fast/forms/menulist-restrict-line-height-expected.checksum:
        * fast/forms/menulist-restrict-line-height-expected.png:
        * fast/forms/menulist-restrict-line-height-expected.txt:
        * fast/forms/menulist-width-change-expected.checksum:
        * fast/forms/menulist-width-change-expected.png:
        * fast/forms/menulist-width-change-expected.txt:
        * fast/forms/select-change-listbox-to-popup-expected.checksum:
        * fast/forms/select-change-listbox-to-popup-expected.png:
        * fast/forms/select-change-listbox-to-popup-expected.txt:
        * fast/forms/select-disabled-appearance-expected.checksum:
        * fast/forms/select-disabled-appearance-expected.png:
        * fast/forms/select-disabled-appearance-expected.txt:
        * fast/forms/stuff-on-my-optgroup-expected.checksum:
        * fast/forms/stuff-on-my-optgroup-expected.png:
        * fast/forms/stuff-on-my-optgroup-expected.txt:
        * fast/parser/document-write-option-expected.checksum:
        * fast/parser/document-write-option-expected.png:
        * fast/parser/document-write-option-expected.txt:
        * http/tests/navigation/anchor-basic-expected.txt:
        * http/tests/navigation/anchor-frames-expected.txt:
        * http/tests/navigation/anchor-goback-expected.checksum:
        * http/tests/navigation/anchor-goback-expected.png:
        * http/tests/navigation/anchor-goback-expected.txt:
        * http/tests/navigation/anchor-subframeload-expected.txt:
        * http/tests/navigation/javascriptlink-basic-expected.checksum:
        * http/tests/navigation/javascriptlink-basic-expected.png:
        * http/tests/navigation/javascriptlink-basic-expected.txt:
        * http/tests/navigation/javascriptlink-frames-expected.txt:
        * http/tests/navigation/javascriptlink-goback-expected.checksum:
        * http/tests/navigation/javascriptlink-goback-expected.png:
        * http/tests/navigation/javascriptlink-goback-expected.txt:
        * http/tests/navigation/javascriptlink-subframeload-expected.txt:
        * http/tests/navigation/metaredirect-basic-expected.checksum:
        * http/tests/navigation/metaredirect-basic-expected.png:
        * http/tests/navigation/metaredirect-basic-expected.txt:
        * http/tests/navigation/metaredirect-frames-expected.txt:
        * http/tests/navigation/metaredirect-goback-expected.checksum:
        * http/tests/navigation/metaredirect-goback-expected.png:
        * http/tests/navigation/metaredirect-goback-expected.txt:
        * http/tests/navigation/metaredirect-subframeload-expected.txt:
        * http/tests/navigation/post-goback2-expected.checksum:
        * http/tests/navigation/post-goback2-expected.png:
        * http/tests/navigation/post-goback2-expected.txt:
        * http/tests/navigation/postredirect-goback2-expected.checksum:
        * http/tests/navigation/postredirect-goback2-expected.png:
        * http/tests/navigation/postredirect-goback2-expected.txt:
        * http/tests/navigation/redirect302-basic-expected.checksum:
        * http/tests/navigation/redirect302-basic-expected.png:
        * http/tests/navigation/redirect302-basic-expected.txt:
        * http/tests/navigation/redirect302-frames-expected.txt:
        * http/tests/navigation/redirect302-goback-expected.checksum:
        * http/tests/navigation/redirect302-goback-expected.png:
        * http/tests/navigation/redirect302-goback-expected.txt:
        * http/tests/navigation/redirect302-subframeload-expected.txt:
        * http/tests/navigation/relativeanchor-basic-expected.txt:
        * http/tests/navigation/relativeanchor-frames-expected.txt:
        * http/tests/navigation/relativeanchor-goback-expected.txt:
        * http/tests/navigation/slowmetaredirect-basic-expected.checksum:
        * http/tests/navigation/slowmetaredirect-basic-expected.png:
        * http/tests/navigation/slowmetaredirect-basic-expected.txt:
        * http/tests/navigation/slowtimerredirect-basic-expected.checksum:
        * http/tests/navigation/slowtimerredirect-basic-expected.png:
        * http/tests/navigation/slowtimerredirect-basic-expected.txt:
        * http/tests/navigation/success200-basic-expected.checksum:
        * http/tests/navigation/success200-basic-expected.png:
        * http/tests/navigation/success200-basic-expected.txt:
        * http/tests/navigation/success200-frames-expected.txt:
        * http/tests/navigation/success200-frames-loadsame-expected.txt:
        * http/tests/navigation/success200-goback-expected.checksum:
        * http/tests/navigation/success200-goback-expected.png:
        * http/tests/navigation/success200-goback-expected.txt:
        * http/tests/navigation/success200-loadsame-expected.checksum:
        * http/tests/navigation/success200-loadsame-expected.png:
        * http/tests/navigation/success200-loadsame-expected.txt:
        * http/tests/navigation/success200-reload-expected.checksum:
        * http/tests/navigation/success200-reload-expected.png:
        * http/tests/navigation/success200-reload-expected.txt:
        * http/tests/navigation/success200-subframeload-expected.txt:
        * http/tests/navigation/timerredirect-basic-expected.checksum:
        * http/tests/navigation/timerredirect-basic-expected.png:
        * http/tests/navigation/timerredirect-basic-expected.txt:
        * http/tests/navigation/timerredirect-frames-expected.txt:
        * http/tests/navigation/timerredirect-goback-expected.checksum:
        * http/tests/navigation/timerredirect-goback-expected.png:
        * http/tests/navigation/timerredirect-goback-expected.txt:
        * http/tests/navigation/timerredirect-subframeload-expected.txt:
        * tables/mozilla/bugs/bug33855-expected.checksum:
        * tables/mozilla/bugs/bug33855-expected.png:
        * tables/mozilla/bugs/bug33855-expected.txt:
        * tables/mozilla/dom/tableDom-expected.checksum:
        * tables/mozilla/dom/tableDom-expected.png:
        * tables/mozilla/dom/tableDom-expected.txt:
        * tables/mozilla_expected_failures/bugs/bug2479-5-expected.checksum:
        * tables/mozilla_expected_failures/bugs/bug2479-5-expected.png:
        * tables/mozilla_expected_failures/bugs/bug2479-5-expected.txt:


Canonical link: https://commits.webkit.org/19811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25322 268f45cc-cd09-0410-ab3c-d52691b4dbfc